--- a/exercicio_4_csv/pom.xml
+++ b/exercicio_4_csv/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>io_exemplo</artifactId>
+    <artifactId>exercicio_4_csv</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -16,13 +16,15 @@
 
 
     <dependencies>
-    
 
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.4</version>
         </dependency>
+
+    
+
 
     </dependencies>
 </project>
