--- a/exercicios_3_bd/pom.xml
+++ b/exercicios_3_bd/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>io_exemplo</artifactId>
+    <artifactId>exercicios_3_bd</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
