--- a/projeto_sistema_manutencao/pom.xml
+++ b/projeto_sistema_manutencao/pom.xml
@@ -28,5 +28,12 @@
     <artifactId>json</artifactId>
     <version>20210307</version> <!-- Ou a versão mais recente -->
 </dependency>
+
+<dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+    </dependency>
     </dependencies>
 </project>
